제목 : 캘린더 프로필 합치가

--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -27,14 +27,7 @@
 <body>
     <div class="wrapper">
         <!-- Sidebar -->
-        <nav class="sidebar">
-            <div class="sidebar-header">
-                <h2>프로필</h2>
-            </div>
-            <ul class="sidebar-menu">
-                <li><a href="#">Dashboard</a></li>
-            </ul>
-        </nav>
+             <nav class="sidebar" th:replace="~{profile}"></nav>
 
         <!-- Content Wrapper -->
         <div class="content-wrapper">
