--- a/src/main/resources/templates/location/locationList.html
+++ b/src/main/resources/templates/location/locationList.html
@@ -310,16 +310,16 @@
 <div id="map">
 	<!-- 버튼 컨테이너 -->
     <div id="mapControls" style="position:absolute; top:10px; left:10px; z-index:1000;">
-    <button onclick="setOverlayMapTypeId('traffic')" style="margin-bottom:5px; padding:8px 12px; font-size:12px; background:black; border:1px solid #ddd; border-radius:5px; cursor:pointer; box-shadow:0 2px 4px rgba(0,0,0,0.1);">
+    <button onclick="setOverlayMapTypeId('traffic')" style="margin-bottom:5px; padding:8px 12px; font-size:12px; color:black; background:white; border:1px solid #ddd; border-radius:5px; cursor:pointer; box-shadow:0 2px 4px rgba(0,0,0,0.1);">
         교통정보
     </button>
-    <button onclick="setOverlayMapTypeId('terrain')" style="margin-bottom:5px; padding:8px 12px; font-size:12px; background:white; border:1px solid #ddd; border-radius:5px; cursor:pointer; box-shadow:0 2px 4px rgba(0,0,0,0.1);">
+    <button onclick="setOverlayMapTypeId('terrain')" style="margin-bottom:5px; padding:8px 12px; font-size:12px; color:black; background:white; border:1px solid #ddd; border-radius:5px; cursor:pointer; box-shadow:0 2px 4px rgba(0,0,0,0.1);">
         지형정보
     </button>
-    <button onclick="setOverlayMapTypeId('bicycle')" style="margin-bottom:5px; padding:8px 12px; font-size:12px; background:white; border:1px solid #ddd; border-radius:5px; cursor:pointer; box-shadow:0 2px 4px rgba(0,0,0,0.1);">
+    <button onclick="setOverlayMapTypeId('bicycle')" style="margin-bottom:5px; padding:8px 12px; font-size:12px; color:black; background:white; border:1px solid #ddd; border-radius:5px; cursor:pointer; box-shadow:0 2px 4px rgba(0,0,0,0.1);">
         자전거 도로
     </button>
-    <button onclick="resetMap()" style="padding:8px 12px; font-size:12px; background:white; border:1px solid #ddd; border-radius:5px; cursor:pointer; box-shadow:0 2px 4px rgba(0,0,0,0.1);">
+    <button onclick="resetMap()" style="padding:8px 12px; font-size:12px; color:black; background:white; border:1px solid #ddd; border-radius:5px; cursor:pointer; box-shadow:0 2px 4px rgba(0,0,0,0.1);">
         초기화
     </button>
 </div>
