--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -37,7 +37,7 @@
                     <a href="#" class="navbar-logo">もふもふ</a>
                     <ul class="navbar-menu">
                         <li><a href="#home">홈</a></li>
-                        <li><a href="#services">피드</a></li>
+                        <li><a href="/log/indexLog">피드</a></li>
                         <li><a href="#about">게시판</a></li>
                         <li><a href="#contact">장소추천</a></li>
                     </ul>
