--- a/src/main/resources/templates/location/locationList.html
+++ b/src/main/resources/templates/location/locationList.html
@@ -62,7 +62,7 @@
 <div class="centered-container">
 <div class="white-background">			
 <h1>장소 추천</h1>
-<div id="search-bar">
+<div id="search-bar-location">
     <input type="text" id="keyword" placeholder="검색어를 입력하세요" />
     <button onclick="searchPlaces()"><i class="fas fa-search"></i></button>
 </div>
