--- a/src/main/resources/templates/review/reviewwrite.html
+++ b/src/main/resources/templates/review/reviewwrite.html
@@ -46,7 +46,7 @@
                  <div class="mb-3">
                      <label for="reviewImagePaths" class="form-label">첨부파일</label>
                      <input type="file" class="form-control" name="reviewImagePaths" id="reviewImagePaths" multiple>
-                     <div class="file-upload-info">※Ctrl 키를 누르고 클릭하면 여러 파일을 선택할 수 있습니다.</div>
+                     <div class="file-upload-info">※Ctrl 키를 누르고 클릭하면 여러 파일을 선택할 수 있습니다.(최대 3장)</div>
                  </div>
                  <!-- 방문일자 -->
                  <div class="mb-3">
