--- a/src/main/resources/templates/review/reviewwrite.html
+++ b/src/main/resources/templates/review/reviewwrite.html
@@ -28,6 +28,7 @@
                  <div class="mb-3">
                  	<label for="reviewContent" class="form-label">내용</label>
                     <textarea class="form-control" rows="5" id="reviewContent" name="reviewContent" placeholder="리뷰 내용을 입력하세요" th:field="*{reviewContent}"></textarea>
+                 	<div class="file-upload-info">※리뷰 내용은 12자 이상 72자 이하로 작성해주세요.</div>
                  </div>
                  <!-- 평점 -->
                  <div class="mb-3">
