회원가입 이메일 인증 부분 코드 수정

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -42,6 +42,7 @@
                     <input type="email" id="email" name="email" placeholder="이메일을 입력하세요" required>
                     <button type="button" id="emailVerificationButton" class="btn">코드 전송</button>
                     <div id="emailError" class="error-message"></div>
+                    <div id="emailSuccessMessage" class="success-message"></div>
                 </div>
                 <!-- 인증 코드 -->
                 <div class="form-group">
