11th -3 commit 중간점검

--- a/src/main/resources/static/logDetail.css
+++ b/src/main/resources/static/logDetail.css
@@ -216,7 +216,7 @@
 /* 댓글 입력창 스타일 */
 #commentSectionFixed {
   display: flex;
-  margin-bottom: 16px;
+  margin-bottom: 10px;
   background: #fff;
 }
 
@@ -248,6 +248,8 @@
 
 /* 좋아요 및 기타 액션 스타일 */
 #logPostFooter {
+  padding: 10px;
+  padding-bottom: 15px;
   display: flex;
   justify-content: space-around;
 }
