--- a/src/main/resources/static/log.css
+++ b/src/main/resources/static/log.css
@@ -575,21 +575,13 @@ body {
     border-radius: 5px;
     cursor: pointer;
 }   
-.logPostBookmark {
-    cursor: pointer;
-    display: inline-block;
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+
+.logPostLike.liked i {
+    color: red;
 }
 
-.logPostBookmark:hover {
-    background-color: #e0e0e0;
-}
-
-.logPostBookmark.bookmarked {
-    color: #ff9800; /* 즐겨찾기 활성화 상태 */
-    font-weight: bold;
+.logPostBookmark.bookmarked i {
+    color: gold;
 }
         
         
