--- a/src/main/resources/static/log.css
+++ b/src/main/resources/static/log.css
@@ -583,6 +583,10 @@ body {
 .logPostBookmark.bookmarked i {
     color: gold;
 }
+/* 댓글 개수가 0이면 숫자를 숨김 */
+.logPostComment span:empty {
+    display: none;
+}
         
         
         
