--- a/src/main/resources/templates/location/locationList.html
+++ b/src/main/resources/templates/location/locationList.html
@@ -214,7 +214,7 @@
     <div class="help-balloon hidden" id="helpBalloon">
         <span class="close-help" onclick="toggleHelpBalloon()">&times;</span>
         <div id="helpContent">
-            <!-- 여기에 도움말 내용을 추가하세요 -->
+            <!-- 도움말 내용을 추가 -->
             <p>※ 지역, 카테고리, 정렬기준, 장소명 검색으로 찾아볼 수 있습니다.</p>
             <p>※ 모든 필터를 사용할 필요는 없습니다. ex) 카테고리만 설정해서 검색도 가능</p>
             <p>※ 지도 아래 좌측 상단에 장소 추천 글을 작성할 수 있습니다.</p>
